--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: AcePictureBot
 description: >
   AcePictureBot is a open source weeb bot.
 baseurl:
-url: "http://ace3df.github.io/AcePictureBot/"
+url: "/AcePictureBot"
 twitter_username: ace3df
 github_username:  ace3df
 
