--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ exclude:
 title: AcePictureBot
 description: >
   AcePictureBot is a open source weeb bot.
-baseurl: "/AcePictureBot"
-url: "http://ace3df.github.io/AcePictureBot/"
+url: "http://AcePictureBot.github.io/"
 twitter_username: ace3df
 github_username:  ace3df
 
