--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ exclude:
 title: AcePictureBot
 description: >
   AcePictureBot is a open source weeb bot.
-url: "http://AcePictureBot.github.io/"
+baseurl: "/AcePictureBot"
+url: "http://ace3df.github.io/AcePictureBot/"
 twitter_username: ace3df
 github_username:  ace3df
 
