--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ bower_components
 /tweepy
 /FFMPEG
 *.pyc
+__pycache__/
+*.py[cod]
+
+ignore_lists/
+lists/
+
+config.py
+
+blocked_waifus.txt
+blocked_users.txt
