--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
 title: AcePictureBot
 description: >
   AcePictureBot is a open source weeb bot.
-baseurl: ""
+baseurl: "AcePictureBot"
 url: "http://AcePictureBot.github.io/AcePictureBot"
 twitter_username: ace3df
 github_username:  ace3df
