--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ exclude:
 title: AcePictureBot
 description: >
   AcePictureBot is a open source weeb bot.
+baseurl: ""
+url: "http://ace3df.github.io/AcePictureBot"
 twitter_username: ace3df
 github_username:  ace3df
 
