Update .gitignore for website side Change donation page

--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,22 @@ bower_components
 .sass-cache
 /git
 /tweepy
+/_backup
+/_update
 /FFMPEG
+*.bat
+*.ini
 *.pyc
 __pycache__/
-*.py[cod]
+*.py
 .idea/
 ignore_lists/
 lists/
 images/
 count.ini
 palette.png
-sankakucomplex.txt
-config.py
-notes
+sankakucomplex.txtnotes
 blocked_waifus.txt
 blocked_users.txt
 *todo
+*-*.txt
