Update the website

--- a/_config.yml
+++ b/_config.yml
@@ -75,3 +75,6 @@ navigation:
     - title: AceNSFWBot
       url: https://twitter.com/AceNSFWBot
       icon: perm_contact_calendar
+    - title: AceYuriNSFWBot
+      url: https://twitter.com/AceYuriNSFWBot
+      icon: perm_contact_calendar
