--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navigation:
   - pages:
     - title: Home
       path: index.md
-    - path: commands.html
+    - path: commands.md
     - path: faq.md
   - title: Development
     pages:
