--- a/Configs/Waifu List.yaml
+++ b/Configs/Waifu List.yaml
@@ -8664,3 +8664,8 @@ Lancer (Fate/Extra ccc):
     - fate/servant/lancer
   otp image: null
   series: Fate (Series)  
+ Neopolitan (RWBY):
+  lists:
+    - waifu
+   otp image: null
+   series: RWBY (Western Anime) 
